--- a/app/src/main/res/anim/bounce.xml
+++ b/app/src/main/res/anim/bounce.xml
@@ -1,10 +1,10 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:fillAfter="true"
     android:interpolator="@android:anim/bounce_interpolator"
-    android:duration="@android:integer/config_longAnimTime">
+    android:duration="800">
 
     <scale
-        android:duration="500"
+        android:duration="800"
         android:fromXScale="1.0"
         android:fromYScale="0.0"
         android:toXScale="1.0"
