--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.658"
-        app:srcCompat="@drawable/bike_image" />
+        app:srcCompat="@drawable/bike" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -44,7 +44,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.259"
-        app:srcCompat="@drawable/bike" />
+        app:srcCompat="@drawable/bicycle" />
 
     <ImageView
         android:id="@+id/imageView3"
