--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,5 +4,6 @@
         <item>@font/abril_fatface</item>
         <item>@font/akronim</item>
         <item>@font/basic</item>
+        <item>@font/roboto_thin</item>
     </array>
 </resources>
